# CLA

./: CMakeLists.txt  Coordinate.cpp  Coordinate.h  FileParser.cpp  FileParser.h  Position.cpp  Position.h  Venue.cpp  Venue.h  VenueRect.cpp  VenueRect.h  main.cpp  test.py
assets/: Big_Smajl.csv  McDonalds.csv  Wa_Sushi.csv
include/: CLA.h  Circle.h  Constants.h  Coordinate.h  DataStreamIterator.hpp  Edge.h  FileParser.h  Point.h  Position.h  PositionParser.h  Rectangle.h  Shape.h  Statistics.cpp  Statistics.h  Triangle.h  UtilityFunctions.h  Vector.h  Venue.h  VenueRect.h  Vertex.h
src/: CLA.cpp  Circle.cpp  Coordinate.cpp  FileParser.cpp  Position.cpp  PositionParser.cpp  Rectangle.cpp  Shape.cpp  Statistics.cpp  Triangle.cpp  UtilityFunctions.cpp  Venue.cpp  VenueRect.cpp
test/: CLA-tests.cpp  main-test.cpp
